[package]
name = "dejiny"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
hostname = "0.4"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
libc = "0.2"
nucleo-matcher = "0.3"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled"] }
nix = { version = "0.31", features = ["signal", "process", "poll", "term"] }
unicode-width = "0.2.2"
zstd = "0.13"
anyhow = "1.0.102"
strip-ansi-escapes = "0.2"
log = "0.4.29"
simplelog = "0.12.2"
regex = "1"

[dev-dependencies]
tempfile = "3"
nix = { version = "0.31", features = ["signal", "process", "poll", "term"] }
libc = "0.2"
